fixed contact spacing in small view

--- a/lesson6/css/preston.css
+++ b/lesson6/css/preston.css
@@ -197,6 +197,10 @@ nav {
     display: none;
 }
 
+.contact {
+    display: block;
+}
+
 footer {
     width: 100%;
 }
